--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Styles Conference</title>
+<title>Anshul Barnwal</title>
 <link rel="stylesheet" href="styles.css">
 <div class="navbar">
   <a class="active" href="#home">Home</a>
